# AnalyzerNBAscouts

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  api.py  demo.py  requirements.txt  scout.py  stats.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: build-push.yml  ci.yml  codeql.yml  deploy.yml  security-scan.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a3855278d889_initial_schema.py  b1c2d3e4f5a6_add_line_opened_to_analyzed_props.py  c2d3e4f5a6b7_add_player_gamedate_unique.py  d3e4f5a6b7c8_add_line_history.py  e4f5a6b7c8d9_add_prop_settlement.py
backend/app/: main.py
backend/app/analytics/: ev.py  matchup.py  minutes.py  stats_parsing.py
backend/app/cache/: keys.py  repository.py
backend/app/clients/: base.py  espn.py  nba_live.py  odds.py
backend/app/core/: arq.py  config.py  constants.py  logging.py  observability.py  redis.py  teams.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  analysis.py  bet.py  game.py  line.py  player.py  player_game_log.py  prop.py  sync_state.py  team.py
backend/app/routers/: backtest.py  bets.py  health.py  players.py  props.py
backend/app/schemas/: backtest.py  bets.py  player.py  props.py  status.py
backend/app/services/: analysis.py  demo.py  ingest.py  player_detail.py  players.py  settlement.py  warehouse.py
backend/app/workers/: enqueue.py  settings.py  tasks.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_backtest.py  test_ingest.py  test_line_history.py  test_line_movement.py  test_player_contract.py  test_props_contract.py  test_warehouse.py
backend/tests/unit/: test_ev.py  test_matchup.py  test_minutes.py  test_settlement.py  test_stats_parsing.py  test_warehouse_mapping.py  test_workers.py
docker/: compose.observability.yml  compose.override.yml  compose.prod.yml  compose.yml
docs/: AI_CONTEXT.md  ARCHITECTURE.md  DEPLOY.md  FRONTEND_REDESIGN_PRO.md  IMAGES.md  PLANO_ARQUITETURA_PROFISSIONAL.md  PLANO_PROXIMAS_ETAPAS.md  RUNBOOK.md  SECURITY.md  WIKI.md
docs/adr/: 0001-task-queue.md  0002-deploy-platform.md
frontend/: .dockerignore  .prettierrc.json  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  queries.ts
frontend/src/components/: AddToWalletButton.tsx  LineMovementGraph.tsx  PlayerAutocomplete.tsx  SectionLabel.tsx  StarButton.tsx  TeamJersey.tsx  ThemeToggle.tsx
frontend/src/components/atoms/: index.tsx
frontend/src/components/motion/: MotionProvider.tsx
frontend/src/components/screens/: ErrorScreen.tsx  LoadingScreen.tsx
frontend/src/components/tweaks/: TweaksPanel.tsx  controls.tsx  style.ts
frontend/src/components/ui/: AnimatedNumber.tsx  Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  Pill.tsx  Skeleton.tsx  Stat.tsx  Tabs.tsx  Tooltip.tsx  index.ts
frontend/src/components/wallet/: WalletChip.tsx  WalletPanel.tsx
frontend/src/hooks/: useFavorites.ts  useIsMobile.ts  useTheme.ts  useTweaks.ts
frontend/src/lib/: bets.test.ts  bets.ts  cn.ts  colors.test.ts  colors.ts  csv.test.ts  csv.ts  format.test.ts  format.ts  playerStats.test.ts  playerStats.ts  props.test.ts  props.ts  ratingTokens.test.ts  ratingTokens.ts  teams.ts  xls.test.ts  xls.ts
frontend/src/pages/Backtest/: Backtest.tsx  index.ts
frontend/src/styles/: global.css
frontend/src/types/: api.ts
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: nba-scout-api.json
scripts/: backup-postgres.sh  create_issues.py  mock_api.py
static/: app.jsx  atoms.jsx  dashboard.jsx  data.jsx  index.html  player.jsx  styles.css
(+32 files in other folders)
