[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nba-scout-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "gunicorn>=23",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis>=8.0.0",
    "arq>=0.26",
    "httpx>=0.28",
    "pandas>=2.2",
    "nba_api>=1.4",
    "cloudscraper>=1.2",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "structlog>=24",
    "sentry-sdk[fastapi]>=2.0",
    "prometheus-fastapi-instrumentator>=7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "fakeredis[aioredis]>=2.26",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4",
    "types-beautifulsoup4",
    "coverage[toml]>=7",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
