[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nba-scout-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.1",
    "uvicorn[standard]>=0.32",
    "gunicorn>=23",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis>=5.2",
    "arq>=0.26",
    "httpx>=0.28",
    "pandas>=2.2",
    "nba_api>=1.4",
    "cloudscraper>=1.2",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "structlog>=24",
    "sentry-sdk[fastapi]>=2.0",
    "prometheus-fastapi-instrumentator>=7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "fakeredis[aioredis]>=2.26",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4",
    "types-beautifulsoup4",
    "coverage[toml]>=7",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
# Testes manipulam sys.path / recarregam modulos antes de importar (imports tardios proposital)
"tests/**/*.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = [
    "tests/*",
    # Infra ainda sem testes diretos (cobertos por integração nos próximos passos)
    "app/clients/*",
    "app/core/*",
    "app/db/*",
    "app/main.py",
    "app/routers/health.py",
    "app/routers/bets.py",
    "app/schemas/*",
    "app/services/analysis.py",
    "app/services/demo.py",
    "app/services/players.py",
    "app/workers/*",
    "app/cache/*",
    # Re-incluídos (cobertos por tests/integration, rodam no CI com Postgres):
    #   app/routers/props.py, app/routers/players.py, app/services/player_detail.py
    #   e a lógica pura de app/analytics/*
]

[tool.coverage.report]
# Mede a lógica pura (analytics/) + read-path da API coberto por integração.
# Threshold sobe conforme mais integração é adicionada.
fail_under = 50
show_missing = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
